@@ -4,12 +4,13 @@ import org.apache.catalina.Context;
 import org.apache.catalina.startup.Tomcat;
 
 import javax.servlet.http.HttpServlet;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 
 public class ServletRouter {
 
-    private static final List<Class<? extends HttpServlet>> servletClasses = new ArrayList<>();
+    private static final List<Class<? extends AbstractRoutableHttpServlet>> servletClasses = new ArrayList<>();
     static {
         servletClasses.add(HomeServlet.class);
         servletClasses.add(LoginServlet.class);
@@ -17,27 +18,20 @@ public class ServletRouter {
     }
 
     public void init(Context ctx){
-        for(Class<? extends HttpServlet> servletClass:servletClasses){
+        for(Class<? extends AbstractRoutableHttpServlet> servletClass:servletClasses){
             try {
-                HttpServlet httpServlet = servletClass.newInstance();
-                Tomcat.addServlet(ctx, LoginServlet.class.getSimpleName(), httpServlet);
-                ctx.addServletMapping("/index.jsp", LoginServlet.class.getSimpleName());
+                AbstractRoutableHttpServlet httpServlet = servletClass.getDeclaredConstructor().newInstance();
+                Tomcat.addServlet(ctx, servletClass.getSimpleName(), httpServlet);
+                ctx.addServletMapping(httpServlet.getPattern(), servletClass.getSimpleName());
             } catch (InstantiationException e) {
                 e.printStackTrace();
             } catch (IllegalAccessException e) {
                 e.printStackTrace();
+            } catch (InvocationTargetException e) {
+                e.printStackTrace();
+            } catch (NoSuchMethodException e) {
+                e.printStackTrace();
             }
         }
-
-
-
-        HomeServlet homeServlet = new HomeServlet();
-        Tomcat.addServlet(ctx, "HomeServlet", homeServlet);
-        // TRICK: mapping with index.jsp, allow access to root path "/"
-        ctx.addServletMapping("/index.jsp", "HomeServlet");
-
-        LogoutServlet logoutServlet = new LogoutServlet();
-        Tomcat.addServlet(ctx, LogoutServlet.class.getSimpleName(), logoutServlet);
-        ctx.addServletMapping("/logout", LogoutServlet.class.getSimpleName());
     }
 }
